samples/_failures_safe/1761088975_3fc835_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a067747.c: In function ‘main’:
./samples/SAFE/__tmp_1a067747.c:169:9: error: ‘get’ undeclared (first use in this function); did you mean ‘getc’?
  169 |         get
      |         ^~~
      |         getc
./samples/SAFE/__tmp_1a067747.c:169:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1a067747.c:169:12: error: expected ‘;’ at end of input
  169 |         get
      |            ^
      |            ;
./samples/SAFE/__tmp_1a067747.c:169:9: error: expected declaration or statement at end of input
  169 |         get
      |         ^~~
./samples/SAFE/__tmp_1a067747.c:169:9: error: expected declaration or statement at end of input
